# canonical_splice_analyzer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  canonical_splice_analyzer.c
